load report directly from memory (TODO: fix loading time, too slow for big reports)

--- a/src/style.css
+++ b/src/style.css
@@ -96,7 +96,7 @@ body {
 	cursor: pointer;
 }
 
-#start-button {
+#top-button {
 	margin: 10px;
 	background-color: var(--button-bg-normal);
 	color: white;
