--- a/src/style.css
+++ b/src/style.css
@@ -13,31 +13,40 @@
 	--url-bg-enabled: #333333;
 	--url-bg-disabled: #555555;
 	--url-color: #cccccc;
-	--box-border-normal: #111111;
-	--url-border-light: #555555;
+	--border-normal: #111111;
+	--border-light: #555555;
+	--border-lighter: #aaaaaa;
 	--button-bg-normal: #F0AD4E;
 	--button-bg-dark: #F0953A;
 	--button-bg-darkest: #F08000;
 	--button-padding-normal: 10px;
+	--button-padding-big: 15px;
 	--button-margin-normal: 5px;
 	--border-radius: 10px;
 	--button-font-size: 16px;
-	--font-size-big: 60px;
+	--font-size-huge: 60px;
+	--font-size-big: 24px;
+	--font-size-small: 14px;
 	--title-color: #4384CD;
+	--form-input-padding: 10px;
+	--form-input-margin: 10px;
 }
 
 body {
 	/* reset body margin which is put by default by chromium */
 	margin: 0;
-	/* background-color: var(--main-bg); */
+}
+
+#main {
+	display: grid;
+	justify-items: center;
 }
 
 .hidden {
 	visibility: hidden;
-	display: none;
 }
 
-.top-bar {
+#top-bar {
 	display: grid;
 	column-gap: 10px;
 	grid-template-columns: 6fr 1fr;
@@ -46,7 +55,7 @@ body {
 }
 
 .box {
-	border: 1px solid var(--box-border-normal);
+	border: 1px solid var(--border-normal);
 	text-decoration: none;
 }
 
@@ -66,7 +75,7 @@ body {
 }
 
 #url-box:focus {
-	border: 1px solid var(--url-border-light);
+	border: 1px solid var(--border-light);
 }
 
 .enabled {
@@ -83,6 +92,22 @@ body {
 	border-radius: var(--border-radius);
 	border-width: 0px;
 	font-size: var(--button-font-size);
+	padding: var(--button-padding-normal);
+	margin: var(--button-margin-normal);
+}
+
+.button:hover {
+	background-color: var(--button-bg-dark);
+	cursor: pointer;
+}
+
+.button:active {
+	background-color: var(--button-bg-darkest);
+	cursor: pointer;
+}
+
+#verify-button {
+	padding: var(--button-padding-big);
 }
 
 #top-button {
@@ -99,23 +124,12 @@ body {
 	background-color: var(--button-bg-dark);
 }
 
-.button:hover {
-	background-color: var(--button-bg-dark);
-	cursor: pointer;
-}
-
-.button:active {
+#top-button:active {
 	background-color: var(--button-bg-darkest);
-	cursor: pointer;
-}
-
-.button.action {
-	padding: var(--button-padding-normal);
-	margin: var(--button-margin-normal);
 }
 
 .main-title {
-	font-size: var(--font-size-big);
+	font-size: var(--font-size-huge);
 	text-align: center;
 	font-family: sans-serif;
 	color: var(--title-color);
@@ -128,23 +142,19 @@ body {
 	transform: translate(-50%, -50%);
 }
 
-#report {
+#report-container {
 	display: grid;
 	justify-items: center;
 }
 
-.report {
+#report {
 	width: 80vw;
 	height: 60vh;
-}
-
-textarea {
 	resize: none;
 }
 
 #form-fields {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
 }
 
 #form-buttons {
@@ -152,12 +162,21 @@ textarea {
 	display: grid;
 }
 
-.label {
+#form-title {
+	font-size: var(--font-size-big);
 	font-family: sans-serif;
 	padding-bottom: 20px;
 }
 
+.label {
+	font-family: sans-serif;
+	font-size: var(--font-size-small);
+	padding-bottom: 5px;
+}
+
 .form-input {
-	padding: 5px;
-	margin: 10px;
+	padding: var(--form-input-padding);
+	margin-bottom: var(--form-input-margin);
+	border-radius: var(--border-radius);
+	border: 1px solid var(--border-lighter);
 }
