--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,14 @@
 	--color-main: hsl(var(--hsl-h-main), var(--hsl-s-main), calc(var(--hsl-l-main) * 0.85));
 	--color-main-dark: hsl(var(--hsl-h-main), var(--hsl-s-main), calc(var(--hsl-l-main) * 0.7));
 	--color-main-darker: hsl(calc(var(--hsl-h-main) - 3), var(--hsl-s-main), calc(var(--hsl-l-main) * 0.68));
+	/* warning */
+	--hsl-h-warning: 45;
+	--hsl-s-warning: 100%;
+	--hsl-l-warning: 75%;
+	--color-warning-light: hsl(var(--hsl-h-warning), var(--hsl-s-warning), var(--hsl-l-warning));
+	--color-warning: hsl(var(--hsl-h-warning), var(--hsl-s-warning), calc(var(--hsl-l-warning) * 0.85));
+	--color-warning-dark: hsl(var(--hsl-h-warning), var(--hsl-s-warning), calc(var(--hsl-l-warning) * 0.7));
+	--color-warning-darker: hsl(calc(var(--hsl-h-warning) - 3), var(--hsl-s-warning), calc(var(--hsl-l-warning) * 0.68));
 	/* gray */
 	--hsl-h-gray: 0;
 	--hsl-s-gray: 0%;
@@ -56,7 +64,7 @@ body {
 	column-gap: 10px;
 	grid-template-columns: 6fr 1fr;
 	background-color: var(--color-gray-darker);
-	height: 100vh;
+	height: 50px;
 }
 
 .box {
@@ -72,12 +80,11 @@ body {
 	background-color: var(--color-gray-dark);
 	border-radius: var(--border-radius);
 	color: var(--color-gray-lighter);
-	margin-top: 10px;
-	margin-left: 10px;
-	margin-bottom: 10px;
-	font-size: 18px;
-	height: 60vh;
-	padding-left: 10px;
+	margin-top: var(--distance-normal);
+	margin-left: var(--distance-normal);
+	margin-bottom: var(--distance-normal);
+	padding-left: var(--distance-big);
+	font-size: var(--font-size-normal);
 }
 
 #url-box:focus {
@@ -96,6 +103,7 @@ body {
 	font-size: var(--font-size-normal);
 	padding: var(--distance-big);
 	margin: var(--distance-small);
+	position: relative;
 }
 
 .button:hover {
@@ -141,7 +149,7 @@ body {
 }
 
 .center {
-	position: fixed;
+	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -202,4 +210,13 @@ body {
 
 .hidden {
 	display: none;
+}
+
+.tooltip {
+	background-color: var(--color-warning-darker);
+	padding: var(--distance-normal);
+	position: absolute;
+	top: 30px;
+	left: -50px;
+	border-radius: 5px;
 }
