display label above report

--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,8 @@
 	--font-size-huge: 60px;
 	--font-size-big: 24px;
 	--font-size-normal: 16px;
-	--font-size-small: 13px;
+	--font-size-small: 14px;
+	--font-size-tiny: 13px;
 	--distance-small: 5px;
 	--distance-normal: 8px;
 	--distance-big: 10px;
