--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,7 @@
 	--color-warning: hsl(var(--hsl-h-warning), var(--hsl-s-warning), calc(var(--hsl-l-warning) * 0.85));
 	--color-warning-dark: hsl(var(--hsl-h-warning), var(--hsl-s-warning), calc(var(--hsl-l-warning) * 0.7));
 	--color-warning-darker: hsl(calc(var(--hsl-h-warning) - 3), var(--hsl-s-warning), calc(var(--hsl-l-warning) * 0.68));
+	--color-warning-darkest: hsl(calc(var(--hsl-h-warning) - 5), var(--hsl-s-warning), calc(var(--hsl-l-warning) * 0.55));
 	/* gray */
 	--hsl-h-gray: 0;
 	--hsl-s-gray: 0%;
@@ -221,10 +222,10 @@ body {
 }
 
 .tooltip {
-	background-color: var(--color-warning-darker);
+	background-color: var(--color-warning-darkest);
 	padding: var(--distance-normal);
 	position: absolute;
-	top: 20px;
-	left: -30px;
+	font-family: var(--font-family);
+	color: white;
 	border-radius: 5px;
 }
