--- a/src/style.css
+++ b/src/style.css
@@ -133,7 +133,7 @@ body {
 	background-color: var(--color-gray-light);
 }
 
-#verify-button {
+#main-button {
 	padding: var(--distance-huge);
 }
 
@@ -146,7 +146,7 @@ body {
 	font-size: var(--font-size-normal);
 }
 
-.main-title {
+#main-title {
 	font-size: var(--font-size-huge);
 	text-align: center;
 	color: var(--color-title);
