disable signature photo button when digital signature is selected

--- a/src/style.css
+++ b/src/style.css
@@ -255,5 +255,6 @@ body {
 
 #form-sign-photo-buttons {
 	grid-template-columns: 1fr 1fr;
+	padding-top: var(--distance-big);
 	padding-bottom: var(--distance-big);
 }
