add data controller and data responsible fields

--- a/src/style.css
+++ b/src/style.css
@@ -286,3 +286,7 @@ body {
 	word-wrap: break-word;
 	word-break: break-word;
 }
+
+#data-controller-responsible {
+	padding-top: var(--distance-big);
+}
