--- a/src/style.css
+++ b/src/style.css
@@ -256,6 +256,7 @@ body {
 	color: white;
 	padding: var(--distance-small);
 	position: absolute;
+	top: -10px;
 	right: 5px;
 	border-radius: 5px;;
 	width: var(--infobox-width);
@@ -303,4 +304,21 @@ body {
 
 #data-controller-responsible {
 	padding-top: var(--distance-big);
+}
+
+.infobadge-container {
+	display: grid;
+	grid-template-columns: 6fr 1fr;
+}
+
+.infobadge {
+	height: 20px;
+	line-height: 20px;
+	background-color: var(--color-gray-light);	
+	color: white;
+	text-align: center;
+	margin-bottom: var(--distance-normal);
+	padding: var(--distance-tiny);
+	position: relative;
+	border-radius: var(--border-radius);
 }
